# muse

./: .gitignore  .gitmodules  Dockerfile  README.md  ROS2_MIGRATION.md  environment.yml  luna.xml
install/: local_setup.sh  setup.sh
install/state_estimator_msgs/share/state_estimator_msgs/rust/: Cargo.toml
log/: latest_build
muse_ros2/: dockerfile
muse_ros2/muse_ws/src/iit_commons/: CMakeLists.txt  package.xml
muse_ros2/muse_ws/src/iit_commons/include/iit_commons/commons/control/: VirtualModel.hpp
muse_ros2/muse_ws/src/iit_commons/include/iit_commons/commons/dog/: body_lengths.h  declarations.h  leg_data_map.h
muse_ros2/muse_ws/src/iit_commons/src/: hydraulics.cpp
muse_ros2/muse_ws/src/iit_commons/src/control/: VirtualModel.cpp  testVirtualModel.cpp
muse_ros2/muse_ws/src/state_estimator/: CMakeLists.txt  package.xml  state_estimator_plugins.xml
muse_ros2/muse_ws/src/state_estimator/config/: attitude_plugin.yaml  contact_plugin.yaml  leg_odometry.yaml  sensor_fusion.yaml
muse_ros2/muse_ws/src/state_estimator/include/state_estimator/: Services.hpp  lib.hpp  plugin.hpp  state_estimator_node.hpp
muse_ros2/muse_ws/src/state_estimator/launch/: pluginlist.yaml  state_estimator.launch  state_estimator.launch.py  state_estimator_ros2.launch  state_estimator_simple.launch  state_estimator_xml.launch.py  timeout.yaml
muse_ros2/muse_ws/src/state_estimator/src/: state_estimator.cpp  state_estimator_node.cpp
muse_ros2/muse_ws/src/state_estimator/src/plugins/: attitude_estimation_plugin.cpp  contact_detection_plugin.cpp  leg_odometry_plugin.cpp  sensor_fusion_plugin.cpp
muse_ros2/muse_ws/src/state_estimator_msgs/: CMakeLists.txt  package.xml
muse_ws/: .gitignore  muse.repos
muse_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
muse_ws/docker_galactic/: Dockerfile
muse_ws/docker_noetic/: Dockerfile
muse_ws/install/: .rosinstall
muse_ws/log/: latest_build
muse_ws/logs/anymal_msgs/: build.cmake.001.log.stderr  build.cmake.002.log.stderr
muse_ws/logs/iit_commons/: build.check.001.log.stderr  build.cmake.001.log.stderr  build.cmake.004.log.stderr  build.make.000.log.stderr  build.make.015.log.stderr  build.make.085.log.stderr
muse_ws/logs/series_elastic_actuator_msgs/: build.cmake.001.log.stderr
muse_ws/logs/state_estimator/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.009.log.stderr  build.check.018.log.stderr  build.check.117.log.stderr  build.check.118.log.stderr  build.check.133.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.004.log.stderr  build.cmake.005.log.stderr  build.cmake.006.log.stderr  build.cmake.007.log.stderr  build.install.117.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.008.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.020.log.stderr  build.make.022.log.stderr  build.make.026.log.stderr  build.make.039.log.stderr  build.make.045.log.stderr  build.make.046.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  build.make.079.log.stderr  build.make.082.log.stderr  build.make.094.log.stderr  build.make.100.log.stderr  build.make.101.log.stderr  build.make.102.log.stderr  build.make.110.log.stderr  build.make.118.log.stderr  (+6 more)
muse_ws/src/: plotjuggler_layout.xml
muse_ws/src/dls2_interface/: CMakeLists.txt  package.xml
muse_ws/src/dls2_interface/msg/: BaseState.msg  Pose.msg
muse_ws/src/iit_commons/: .gitlab-ci.yml  CMakeLists.txt  package.xml
muse_ws/src/iit_commons/include/iit/commons/dog/: leg_data_map.h
muse_ws/src/muse_point_lio/: package.xml  setup.py
muse_ws/src/muse_point_lio/config/: point_lio_bridge.yaml
muse_ws/src/muse_point_lio/launch/: muse_with_point_lio.launch.py  point_lio_bridge.launch.py
muse_ws/src/muse_point_lio/muse_point_lio/: odom_bridge.py
muse_ws/src/muse_point_lio/resource/: muse_point_lio
muse_ws/src/state_estimator/: CMakeLists.txt  package.xml  state_estimator_plugins.xml
muse_ws/src/state_estimator/config/: attitude_plugin.yaml  contact_data_packaging_plugin.yaml  contact_plugin.yaml  joint_state_downsampler_plugin.yaml  leg_odometry.yaml  multi_sensor_fusion.yaml  proprioceptive_sensor_fusion.yaml  sensor_fusion.yaml  sensor_fusion_responsive.yaml  tf_publisher.yaml  tf_state_publisher.yaml
muse_ws/src/state_estimator/include/state_estimator/: Estimator.hpp  Robot.hpp  Services.hpp  lib.hpp  plugin.hpp  plugin_base.hpp  state_estimator_node.hpp
muse_ws/src/state_estimator/include/state_estimator/Models/: attitude_bias_NLO.hpp  attitude_bias_XKF.hpp  grf_contact_estimator.hpp  joint_state_snapshot.hpp  leg_odometry.hpp  multi_sensor_fusion.hpp  proprioceptive_sensor_fusion.hpp  sensor_fusion.hpp
muse_ws/src/state_estimator/include/state_estimator/Observers/: EKF.hpp  NLO.hpp  Observer.hpp
muse_ws/src/state_estimator/launch/: pluginlist.yaml  state_estimator.launch  state_estimator.launch.py  timeout.yaml
muse_ws/src/state_estimator/rviz/: state_estimator.rviz
muse_ws/src/state_estimator/src/: state_estimator.cpp  state_estimator_node.cpp  state_estimator_ros2_stub.cpp
muse_ws/src/state_estimator/src/plugins/: attitude_estimation_plugin.cpp  contact_data_packaging_plugin.cpp  contact_detection_plugin.cpp  joint_state_downsampler_plugin.cpp  leg_odometry_plugin.cpp  multi_sensor_fusion_plugin.cpp  proprioceptive_sensor_fusion_plugin.cpp  sensor_fusion_plugin.cpp  tf_publisher_plugin.cpp  tf_state_publisher_plugin.cpp
muse_ws/src/state_estimator/test/: model_validation_test.cpp  plugin_loading_test.cpp
muse_ws/src/state_estimator_msgs/: CMakeLists.txt  package.xml
muse_ws/src/state_estimator_msgs/msg/: Attitude.msg  BaseHeight.msg
muse_ws/src/unitree_go/: CMakeLists.txt  package.xml
muse_ws/src/unitree_go/msg/: BmsState.msg  LowState.msg  MotorState.msg
src/state_estimator_msgs/: CMakeLists.txt  package.xml
(+597 files in other folders)
