<package format="3">
  <name>iit_commons</name>
  <version>1.0.0</version>
  <description>
        iit-commons.
  </description>
  <maintainer email="gennaro.raiola@iit.it">Gennaro Raiola</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
