<?xml version="1.0"?>
<package format="3">
  <name>iit_commons</name>
  <version>1.0.0</version>
  <description>Common control, geometry, and rigid-body helpers from IIT.</description>
  <maintainer email="gennaro.raiola@iit.it">Gennaro Raiola</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
