<?xml version="1.0"?>
<package format="3">
  <name>state_estimator</name>
  <version>0.0.1</version>
  <description>The state_estimator package</description>

  <maintainer email="ylenia.nistico@iit.it">Geoff Fink</maintainer>

  <license>TODO</license>

  <author email="ylenia.nistico@iit.it">Geoff Fink</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>class_loader</depend>
  <depend>iit_commons</depend>
  <depend>state_estimator_msgs</depend>
  <depend>unitree_go</depend>
  <depend>dls2_interface</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <build_depend>pinocchio</build_depend>
  <exec_depend>pinocchio</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
