<?xml version="1.0"?>
<package format="3">
  <name>state_estimator</name>
  <version>0.0.1</version>
  <description>MUSE proprioceptive state estimator for ROS 2.</description>
  <maintainer email="ylenia.nistico@iit.it">Geoff Fink</maintainer>
  <author email="ylenia.nistico@iit.it">Geoff Fink</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>iit_commons</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>state_estimator_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
