<?xml version="1.0"?>
<package format="3">
  <name>state_estimator_msgs</name>
  <version>0.0.1</version>
  <description>Robot-independent messages and services for MUSE.</description>
  <maintainer email="ylenia.nistico@iit.it">Geoff Fink</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
