<?xml version="1.0"?>
<package format="3">
  <name>unitree_go</name>
  <version>0.0.1</version>
  <description>Unitree ROS2 message definitions used by the state estimator.</description>
  <maintainer email="ylenia.nistico@iit.it">Geoff Fink</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
