<?xml version="1.0"?>
<package format="3">
  <name>state_estimator</name>
  <version>0.0.1</version>
  <description>The state_estimator package</description>

  <maintainer email="ylenia.nistico@iit.it">Geoff Fink</maintainer>

  <license>TODO</license>

  <author email="ylenia.nistico@iit.it">Geoff Fink</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>message_filters</depend>
  <depend>rclcpp_components</depend>
  <!-- <depend>iit_commons</depend> -->
  <depend>state_estimator_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>pinocchio</build_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/state_estimator_plugins.xml" />
  </export>

</package>
